--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,4 +19,4 @@ jobs:
 
       - run: npm publish
         env:
-          NODE_AUTH_TOKEN: ${{ env.NPM_CONFIG_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_CONFIG_TOKEN }}
