--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
     "@types/papaparse": "^5.3.7",
     "ajv": "^8.12.0",
     "ajv-formats": "^2.1.1",
+    "lodash": "^4.17.21",
     "papaparse": "^5.4.1"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.4",
     "@typescript-eslint/eslint-plugin": "^6.12.0",
     "@typescript-eslint/parser": "^6.12.0",
     "ava": "^5.2.0",
