--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/papaparse": "^5.3.7",
     "ajv": "^8.12.0",
     "ajv-formats": "^2.1.1",
+    "npx": "^10.2.2",
     "papaparse": "^5.4.1"
   },
   "devDependencies": {
