--- a/package.json
+++ b/package.json
@@ -16,34 +16,32 @@
     "./src/*": "./src/*.ts"
   },
   "scripts": {
-    "build": "npx tsc",
-    "lint": "npx tsc && eslint \"**/*.{js,ts}\"",
-    "lint:fix": "npx tsc --noEmit && eslint \"**/*.{js,ts}\" --quiet --fix",
+    "build": "tsc",
+    "lint": "tsc && eslint \"**/*.{js,ts}\"",
+    "lint:fix": "tsc --noEmit && eslint \"**/*.{js,ts}\" --quiet --fix",
     "prettier": "prettier --check \"**/*.{js,ts}\"",
     "prettier:fix": "prettier --write \"**/*.{js,ts}\"",
     "test": "ava",
-    "prepublish": "npx tsc"
+    "prepublish": "tsc"
   },
   "dependencies": {
-    "@streamparser/json": "^0.0.17",
-    "@types/node": "^20.2.5",
-    "@types/papaparse": "^5.3.7",
-    "ajv": "^8.12.0",
-    "ajv-formats": "^2.1.1",
-    "npx": "^10.2.2",
+    "@streamparser/json": "^0.0.21",
+    "@types/node": "^20.16.5",
+    "@types/papaparse": "^5.3.14",
+    "ajv": "^8.17.1",
+    "ajv-formats": "^3.0.1",
     "papaparse": "^5.4.1"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^6.12.0",
-    "@typescript-eslint/parser": "^6.12.0",
-    "ava": "^5.2.0",
-    "eslint": "^8.37.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-prettier": "^5.0.1",
+    "@typescript-eslint/eslint-plugin": "^8.5.0",
+    "@typescript-eslint/parser": "^8.5.0",
+    "ava": "^6.1.3",
+    "eslint": "^9.10.0",
+    "eslint-config-prettier": "^9.1.0",
     "esm": "^3.2.25",
-    "prettier": "^3.1.0",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.0.2"
+    "prettier": "^3.3.3",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.6.0"
   },
   "ava": {
     "files": [
@@ -56,30 +54,5 @@
       "--loader=ts-node/esm",
       "--experimental-specifier-resolution=node"
     ]
-  },
-  "eslintConfig": {
-    "parser": "@typescript-eslint/parser",
-    "extends": [
-      "plugin:@typescript-eslint/recommended",
-      "prettier"
-    ],
-    "plugins": [
-      "prettier"
-    ],
-    "parserOptions": {
-      "ecmaVersion": 2018,
-      "sourceType": "module"
-    },
-    "ignorePatterns": [
-      "node_modules/",
-      "lib/"
-    ]
-  },
-  "prettier": {
-    "endOfLine": "lf",
-    "semi": false,
-    "singleQuote": false,
-    "tabWidth": 2,
-    "trailingComma": "es5"
   }
 }
