--- a/package.json
+++ b/package.json
@@ -16,12 +16,12 @@
     "./src/*": "./src/*.ts"
   },
   "scripts": {
-    "build": "tsc",
+    "build": "tsc && copyfiles -u 2 \"src/schemas/*\" lib/schemas",
     "lint": "tsc && eslint \"**/*.{js,ts}\"",
     "lint:fix": "tsc --noEmit && eslint \"**/*.{js,ts}\" --quiet --fix",
     "prettier": "prettier --check \"**/*.{js,ts}\"",
     "prettier:fix": "prettier --write \"**/*.{js,ts}\"",
-    "test": "ava",
+    "test": "jest --coverage",
     "prepublish": "tsc"
   },
   "dependencies": {
@@ -30,29 +30,23 @@
     "@types/papaparse": "^5.3.14",
     "ajv": "^8.17.1",
     "ajv-formats": "^3.0.1",
+    "lodash": "^4.17.21",
     "papaparse": "^5.4.1"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.13",
+    "@types/lodash": "^4.17.7",
     "@typescript-eslint/eslint-plugin": "^8.5.0",
     "@typescript-eslint/parser": "^8.5.0",
-    "ava": "^6.1.3",
+    "copyfiles": "^2.4.1",
     "eslint": "^9.10.0",
     "eslint-config-prettier": "^9.1.0",
     "esm": "^3.2.25",
+    "jest": "^29.7.0",
+    "jest-extended": "^4.0.2",
     "prettier": "^3.3.3",
+    "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.0"
-  },
-  "ava": {
-    "files": [
-      "test/**/*.spec.*"
-    ],
-    "extensions": {
-      "ts": "module"
-    },
-    "nodeArguments": [
-      "--loader=ts-node/esm",
-      "--experimental-specifier-resolution=node"
-    ]
   }
 }
