Add validateColumns tests
Fix OBOB for code count. Add tests for incorrect use of code columns.

Start filling out tests for validateRow tall

Adding "normalized columns" so that we can easily find the location of
elements, but keep the original formatting for message purposes.

Define some of the tests for validating a row in tall mode. Fields
tested are description, setting, and the drug information fields.

Add tests for code pairs and non-payer specific charges

add tests for payer specific negotiated charge

Add "other" methodology conditional

Still messing around a bit with types and the structure of the
validation tree.

Add tests for requiring at least one charge

I'm starting to feel uneasy about some of these implementations. Might
try to change up how they go so I have less actual logic in the
predicate functions.

Change up validation types and partial function application

Individual validation functions are redefined so that the arguments are
listed in a useful order for binding. This means that when actually
validating the row, the only values to pass in are the data object and
the row index.

Add tests for dollar amount requiring min and max

Remove reset method, since it's really just for convenience, and it
doesn't actually make things that much more convenient.

--- a/package.json
+++ b/package.json
@@ -31,11 +31,13 @@
     "ajv": "^8.17.1",
     "ajv-formats": "^3.0.1",
     "lodash": "^4.17.21",
-    "papaparse": "^5.4.1"
+    "papaparse": "^5.4.1",
+    "semver": "^7.6.3"
   },
   "devDependencies": {
     "@types/jest": "^29.5.13",
     "@types/lodash": "^4.17.7",
+    "@types/semver": "^7.5.8",
     "@typescript-eslint/eslint-plugin": "^8.5.0",
     "@typescript-eslint/parser": "^8.5.0",
     "copyfiles": "^2.4.1",
