--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "lint:fix": "tsc --noEmit && eslint \"**/*.{js,ts}\" --quiet --fix",
     "prettier": "prettier --check \"**/*.{js,ts}\"",
     "prettier:fix": "prettier --write \"**/*.{js,ts}\"",
-    "test": "jest --coverage",
+    "test": "cross-env NODE_OPTIONS=--experimental-vm-modules jest --coverage",
     "prepublish": "tsc"
   },
   "dependencies": {
@@ -38,10 +38,11 @@
     "@types/jest": "^29.5.13",
     "@types/lodash": "^4.17.7",
     "@types/semver": "^7.5.8",
-    "@typescript-eslint/eslint-plugin": "^8.5.0",
-    "@typescript-eslint/parser": "^8.5.0",
+    "@typescript-eslint/eslint-plugin": "^8.17.0",
+    "@typescript-eslint/parser": "^8.17.0",
     "copyfiles": "^2.4.1",
-    "eslint": "^9.10.0",
+    "cross-env": "^7.0.3",
+    "eslint": "^9.16.0",
     "eslint-config-prettier": "^9.1.0",
     "esm": "^3.2.25",
     "jest": "^29.7.0",
@@ -49,6 +50,6 @@
     "prettier": "^3.3.3",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
-    "typescript": "^5.6.0"
+    "typescript": "^5.7.2"
   }
 }
