--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "lint:fix": "tsc --noEmit && eslint \"**/*.{js,ts}\" --quiet --fix",
     "prettier": "prettier --check \"**/*.{js,ts}\"",
     "prettier:fix": "prettier --write \"**/*.{js,ts}\"",
-    "test": "cross-env NODE_OPTIONS=--experimental-vm-modules jest --coverage",
+    "test": "vitest",
     "prepublish": "tsc"
   },
   "dependencies": {
@@ -35,7 +35,6 @@
     "semver": "^7.6.3"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.13",
     "@types/lodash": "^4.17.7",
     "@types/semver": "^7.5.8",
     "@typescript-eslint/eslint-plugin": "^8.17.0",
@@ -45,11 +44,9 @@
     "eslint": "^9.16.0",
     "eslint-config-prettier": "^9.1.0",
     "esm": "^3.2.25",
-    "jest": "^29.7.0",
-    "jest-extended": "^4.0.2",
     "prettier": "^3.3.3",
-    "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
-    "typescript": "^5.7.2"
+    "typescript": "^5.7.2",
+    "vitest": "^3.2.4"
   }
 }
