--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,14 +3,14 @@
   "include": ["src"],
   "compilerOptions": {
     "target": "ES2020",
-    "module": "ES2020",
-    "moduleResolution": "node",
+    "module": "nodenext",
     "strict": true,
     "esModuleInterop": true,
     "declaration": true,
     "outDir": "./lib",
     "baseUrl": "./",
     "allowSyntheticDefaultImports": true,
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "types": ["vitest/globals"]
   }
 }
